# release-notes

./: .gitignore  .pre-commit-config.yaml  CHANGES.rst  Dockerfile  LICENSE  README.rst  action.yml  pyproject.toml  relnotes.py
.github/workflows/: publish.yml  test.yml
tests/: test_relnotes.py
